// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loads and displays fractional percent 1`] = `
<div>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <div
      class="MuiBox-root css-9vy3tp"
    >
      <span
        aria-label="Percent of supply"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="1"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-eglki6-MuiLinearProgress-root"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-5xe99f-MuiLinearProgress-bar1"
          style="transform: translateX(-98.8889%);"
        />
      </span>
    </div>
    <div
      class="MuiBox-root css-pazuet"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
      >
        1.1111%
      </p>
    </div>
  </div>
</div>
`;

exports[`loads and displays no fractional percent 1`] = `
<div>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <div
      class="MuiBox-root css-9vy3tp"
    >
      <span
        aria-label="Percent of supply"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-eglki6-MuiLinearProgress-root"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-5xe99f-MuiLinearProgress-bar1"
          style="transform: translateX(-70%);"
        />
      </span>
    </div>
    <div
      class="MuiBox-root css-pazuet"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
      >
        30%
      </p>
    </div>
  </div>
</div>
`;

exports[`loads and displays very small percent as 0% 1`] = `
<div>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <div
      class="MuiBox-root css-9vy3tp"
    >
      <span
        aria-label="Percent of supply"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-eglki6-MuiLinearProgress-root"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-5xe99f-MuiLinearProgress-bar1"
          style="transform: translateX(-100%);"
        />
      </span>
    </div>
    <div
      class="MuiBox-root css-pazuet"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
      >
        0%
      </p>
    </div>
  </div>
</div>
`;
